icl folder name change

--- a/Inter Custom Logistics/index.html
+++ b/Inter Custom Logistics/index.html
@@ -78,7 +78,7 @@
 							</p>
 						</li>
 						<li>
-							<img src="images/smiling.png" alt="Img" height="100" width="100" />
+							<img src="images/tracking.png" alt="Img" height="100" width="100" />
 							<h3>Mobile Tracking</h3>
 							<p>
 								Track your shipments on any smart phone or browser.
