--- a/Inter Custom Logistics/services.html
+++ b/Inter Custom Logistics/services.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Tools & Resources Inter Custom Logistics-Miami Freight Forwarding</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding Services</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
@@ -37,7 +37,7 @@
 					<h2>Get Your Free Quote</h2>
 				</div>
 			</a>
-			<div class="main">			<!-- or class="section" -->
+			<div class="section">			<!-- or class="section" -->
 				<div class="box">
 					<div>
 						<div>
@@ -47,44 +47,64 @@
 								</tr>
 								<tr>
 									<td>
-										<a href="http://www.evergreen-marine.com/tei1/jsp/TEI1_Containers.jsp" target="_blank">
-											<img src="images/container.jpg" alt="Img" height="120" width="120" />
+										<a href="airexports.html">
+											<img src="images/plane.png" alt="Img" height="120" width="120" />
 										</a>
-										<h4><a href="http://www.evergreen-marine.com/tei1/jsp/TEI1_Containers.jsp" target="_blank">Air/Ocean Container Sizes</a></h4>
+										<h4><a href="airexports.html">Air Export</a></h4>
 									</td>
 									<td>
-										<a href="http://www.xe.com/currencyconverter/" target="_blank">
-											<img src="images/currency.png" alt="Img" height="120" width="120" />
+										<a href="airimports.html">
+											<img src="images/plane.jpg" alt="Img" height="120" width="120" />
 										</a>
-										<h4><a href="http://www.xe.com/currencyconverter/" target="_blank">Currency Converter</a></h4>
+										<h4><a href="airimports.html">Air Imports</a></h4>
 									</td>
 									<td>
-										<a href="http://www.fmc.gov/" target="_blank">
-											<img src="images/fmc.gif" alt="Img" height="120" width="120" />
+										<a href="customsbrokerage.html">
+											<img src="images/customs.jpg" alt="Img" height="120" width="120" />
 										</a>
-										<h4><a href="http://www.fmc.gov/" target="_blank">Federal Martime Commision</a></h4>
+										<h4><a href="customsbrokerage.html">Customs Brokerage</a></h4>
 									</td>
 								</tr>
 							</table>
 							<table>
 								<tr>
 									<td>
-										<a href="oceanexports.html" target="_blank">
+										<a href="oceanexports.html">
 											<img src="images/ocean.jpg" alt="Img" height="120" width="120" />
 										</a>
-										<h4><a href="oceanexports.html" target="_blank">Ocean Exports</a></h4>
+										<h4><a href="oceanexports.html">Ocean Exports</a></h4>
 									</td>
 									<td>
-										<a href="http://www.ehs.neu.edu/hazardous_material/hazardous_material/" target="_blank">
-											<img src="images/hazardous.gif" alt="Img" height="120" width="120" />
+										<a href="oceanimports.html">
+											<img src="images/ocean2.jpg" alt="Img" height="120" width="120" />
 										</a>
-										<h4><a href="http://www.ehs.neu.edu/hazardous_material/hazardous_material/" target="_blank">Hazardous Material Defenition</a></h4>
+										<h4><a href="oceanimports.html">Ocean Imports</a></h4>
 									</td>
 									<td>
-										<a href="landtransportation.html" target="_blank">
+										<a href="landtransportation.html">
 											<img src="images/truck.png" alt="Img" height="120" width="120" />
 										</a>
-										<h4><a href="landtransportation.html" target="_blank" style="font-size: 15px;">Land Transportation</a></h4>
+										<h4><a href="landtransportation.html" style="font-size: 15px;">Land Transportation</a></h4>
+									</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section">			<!-- or class="section" -->
+				<div class="box">
+					<div>
+						<div>
+							<table>
+								<tr>
+									<h2><a href="resources.html" style="text-decoration: none;"><span>Tools &</span> Resources</a></h2>
+								</tr>
+								<tr>
+									<td>
+										<a href="resources.html">
+											<img src="images/tools.jpg" alt="Img" height="246" width="500"/>
+										</a>
 									</td>
 								</tr>
 							</table>
