--- a/Inter Custom Logistics/index.html
+++ b/Inter Custom Logistics/index.html
@@ -5,14 +5,23 @@
 	<meta charset="UTF-8">
 	<title>Inter Custom Logistics-Miami Freight Forwarding</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<link rel="stylesheet" href="css/mobile.css" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 	<div id="header">
 		<div class="area-header">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
+				<a href="index.html">
+					<img src="images/logo-border.png" alt="LOGO">
+				</a>
 			</div>
 			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
+			</div>
+			<div class="index-quote">
+				<a href="quote.html">
+					<h2>Get Your Free Quote</h2>
+				</a>
 			</div>
 			<ul id="navigation">
 				<li class="selected">
@@ -31,35 +40,24 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<a href="quote.html">
-		<div class="area-quote">
-			<div class="index-quote">
-				<h2>Get Your Free Quote</h2>
-			</div>
+		<div id="banner">
 		</div>
-		</a>
-		<div id="adbox">
-			<div class="area">
+		<div class="area-transport">
+			<div class="transport">
+				<a href="landtransportation.html"><h2><span>LAND</span> TRANSPORT</h2></a>
+			</div>
+			<div class="transport">
+				<a href="oceanexports.html"><h2><span>Ocean</span> TRANSPORT</h2></a>
+			</div>
+			<div class="transport">
+				<a href="airexports.html"><h2><span>Air</span> TRANSPORT</h2></a>
+			</div>
+			<div class="transport">
+				<a href="resources.html"><h2><span>TOOLS &</span> RESOURCES</h2></a>
 			</div>
 		</div>
 		<div class="area">
 			<div class="main">
-				<div id="adbox2">
-				</div>
-				<div class="area-transport">
-					<div class="transport">
-						<h2><a href="landtransportation.html"><span>LAND</span> TRANSPORT</h2></a>
-					</div>
-					<div class="transport">
-						<h2><a href="oceanexports.html"><span>Ocean</span> TRANSPORT</h2></a>
-					</div>
-					<div class="transport">
-						<h2><a href="airexports.html"><span>Air</span> TRANSPORT</h2></a>
-					</div>
-					<div class="transport">
-						<h2><a href="resources.html"><span>TOOLS &</span> RESOURCES</h2></a>
-					</div>
-				</div>
 				<div id="features">
 					<h2>Why Choose Us</h2>
 					<ul>
@@ -105,7 +103,7 @@
 		</div>
 	</div>
 	<div id="index-footer">
-		<div class="area">
+		<div class="footer-content">
 			<div id="connect">
 				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 			</div>
