--- a/Inter Custom Logistics/quote.html
+++ b/Inter Custom Logistics/quote.html
@@ -58,7 +58,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contents" style="min-height: 490px;">
+	<div id="contents" style="min-height: 490px;margin-top: 40px;">
 		<a href="quote.html">
 			<div id="about" class="area-quote">
 			<div class="quote">
