--- a/Inter Custom Logistics/thanks.html
+++ b/Inter Custom Logistics/thanks.html
@@ -29,7 +29,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contents" style="min-height: 490px;">
+	<div id="contents" style="min-height: 490px;margin-top: 40px;">
 	   <div id="about" class="area-quote">
        <a href="quote.html">
 			   <div class="quote">
