--- a/Inter Custom Logistics/contact.html
+++ b/Inter Custom Logistics/contact.html
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contents" style="min-height: 490px;">
+	<div id="contents" style="min-height: 490px;margin-top: 40px;">
 		<div id="about" class="area-quote" style="width: 990px;">
 			<a href="quote.html">
 				<div class="quote">
