--- a/Inter Custom Logistics/oceanexports.html
+++ b/Inter Custom Logistics/oceanexports.html
@@ -29,7 +29,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contents" style="min-height: 490px;">
+	<div id="contents" style="min-height: 490px;margin-top: 65px;">
 			<div id="about" class="area">
 				<a href="quote.html">
 					<div id="about" class="area-quote">
