--- a/Inter Custom Logistics/resources.html
+++ b/Inter Custom Logistics/resources.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Tools & Resources Inter Custom Logistics-Miami Freight Forwarding</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 	<div id="header">
