--- a/Inter Custom Logistics/index.html
+++ b/Inter Custom Logistics/index.html
@@ -13,6 +13,7 @@
 			$("#menu-button").click(function(){
 				$(".menu",this).toggleClass("hover");
 				$("#navigation").toggleClass("show");
+				$("body").toggleClass("stopScroll");
 			});
 		});
 	</script>
@@ -84,7 +85,7 @@
 							<img src="images/shopping.png" alt="Img" height="100" width="100" />
 							<h3>Insurance/Security</h3>
 							<p>
-								Your cargo is fully insured. Our premicses contain top of the line 24/7 security.
+								Your cargo is fully insured. Our premises contain top of the line 24/7 security.
 							</p>
 						</li>
 						<li>
