--- a/Inter Custom Logistics/about.html
+++ b/Inter Custom Logistics/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics-Miami Freight Forwarding</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding About Us</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 	<link rel="stylesheet" href="css/mobile.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -33,10 +33,10 @@
 				</a>
 			</div>
 			<ul id="navigation">
-				<li class="selected">
+				<li>
 					<a href="index.html">Home</a>
 				</li>
-				<li>
+				<li class="selected">
 					<a href="about.html">About</a>
 				</li>
 				<li>
