--- a/Inter Custom Logistics/oceanimports.html
+++ b/Inter Custom Logistics/oceanimports.html
@@ -4,14 +4,33 @@
 	<meta charset="UTF-8">
 	<title>Professional Ocean Imports, Inter Custom Logistics-Miami Freight Forwarding</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<link rel="stylesheet" href="css/mobile.css" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$("#menu-button").click(function(){
+				$(".menu",this).toggleClass("hover");
+				$("#navigation").toggleClass("show");
+				$("body").toggleClass("stopScroll");
+			});
+		});
+	</script>
 </head>
 <body>
 	<div id="header">
 		<div class="area-header">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
+				<a href="index.html">
+					<img src="images/logo-border.png" alt="LOGO">
+				</a>
 			</div>
 			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
+			</div>
+			<div class="index-quote">
+				<a href="quote.html">
+					<h2>Get Your Free Quote</h2>
+				</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -27,71 +46,67 @@
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
+			<div id="menu-button">
+				<a href="#" class="menu example5"><span></span></a>
+			</div>
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;margin-top: 65px;">
 			<div id="about" class="area">
-				<a href="quote.html">
-					<div id="about" class="area-quote">
-					<div class="quote">
-					<h2>Get Your Free Quote</h2>
-					</div>
-				</a>
-		</a>
-			<div class="section">
-				<div class="box">
-					<div>
+				<div class="section">
+					<div class="box">
 						<div>
-							<h3>Ocean Imports</h3>
-							<p><br>
-								Ocean import remains the keystone of our company. The comprehensive coordination of regular supply chain logistics and economic transportation allows our clients to receive service tailor-made to meet their needs and requirements.
-								<br><br>
-								Whether we provide a multiple vendor consolidation service or a single shipper/consignee service, each shipment is handled with the high quality professionalism which is our standard.
-								<br><br>
-								Working with our clients, overseas partners/affiliates, we combine volumes to obtain the most competitive ocean rate contracts, which benefit all parties concerned.
-							</p>
+							<div>
+								<h3>Ocean Imports</h3>
+								<p><br>
+									Ocean import remains the keystone of our company. The comprehensive coordination of regular supply chain logistics and economic transportation allows our clients to receive service tailor-made to meet their needs and requirements.
+									<br><br>
+									Whether we provide a multiple vendor consolidation service or a single shipper/consignee service, each shipment is handled with the high quality professionalism which is our standard.
+									<br><br>
+									Working with our clients, overseas partners/affiliates, we combine volumes to obtain the most competitive ocean rate contracts, which benefit all parties concerned.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="section">
-				<div class="box">
-					<div>
+				<div class="section">
+					<div class="box">
 						<div>
-							<h3>Services</h3>
-								<ul style="list-style-type:disc">
-									<li>Product Sourcing</li>
-	                <li>Buyer’s Consolidation</li>
-	                <li>Weekly Consolidations from Asia/Europe</li>
-	                <li>Ocean Transportation Options</li>
-	                <li>IFS Tracker</li>
-	                <li>Customs Clearance 24/7</li>
-									<li>Marine Insurance</li>
-									<li>Domestic Distribution/Delivery</li>
-									<li>Landed Cost Reports</li>
-									<li>Specialized Reporting</li>
-								</ul>
+							<div>
+								<h3>Services</h3>
+									<ul style="list-style-type:disc">
+										<li>Product Sourcing</li>
+		                <li>Buyer’s Consolidation</li>
+		                <li>Weekly Consolidations from Asia/Europe</li>
+		                <li>Ocean Transportation Options</li>
+		                <li>IFS Tracker</li>
+		                <li>Customs Clearance 24/7</li>
+										<li>Marine Insurance</li>
+										<li>Domestic Distribution/Delivery</li>
+										<li>Landed Cost Reports</li>
+										<li>Specialized Reporting</li>
+									</ul>
+							</div>
 						</div>
 					</div>
 				</div>
+				<button onclick="goBack()" class="btn">Go Back</button>
+				<script>
+				function goBack() {
+						window.history.back();
+				}
+				</script>
 			</div>
-			<button onclick="goBack()" class="btn">Go Back</button>
-			<script>
-			function goBack() {
-					window.history.back();
-			}
-			</script>
 		</div>
-	</div>
-	<div id="footer">
-		<div class="area">
-			<div id="connect">
-				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
+		<div id="footer">
+			<div class="footer-content">
+				<div id="connect">
+					<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
+				</div>
+				<p>
+					© 2015 Inter Custom Logistics. All Rights Reserved.
+				</p>
 			</div>
-			<p>
-				© 2015 Inter Custom Logistics. All Rights Reserved.
-			</p>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
