--- a/Inter Custom Logistics/quote.html
+++ b/Inter Custom Logistics/quote.html
@@ -4,6 +4,18 @@
 	<meta charset="UTF-8">
 	<title>Get Your Free Freight Forwarding Quote From Inter Custom Logistics-Miami</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<link rel="stylesheet" href="css/mobile.css" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$("#menu-button").click(function(){
+				$(".menu",this).toggleClass("hover");
+				$("#navigation").toggleClass("show");
+				$("body").toggleClass("stopScroll");
+			});
+		});
+	</script>
   <script type="text/JavaScript">
   function MM_preloadImages() { //v3.0
     var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
@@ -38,9 +50,16 @@
 	<div id="header">
 		<div class="area-header">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
+				<a href="index.html">
+					<img src="images/logo-border.png" alt="LOGO">
+				</a>
 			</div>
 			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
+			</div>
+			<div class="index-quote">
+				<a href="quote.html">
+					<h2>Get Your Free Quote</h2>
+				</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -56,17 +75,15 @@
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
+			<div id="menu-button">
+				<a href="#" class="menu example5"><span></span></a>
+			</div>
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;margin-top: 40px;">
-		<a href="quote.html">
-			<div id="about" class="area-quote">
-			<div class="quote">
-					<h2>Get Your Free Quote</h2>
-			</div>
-		</a>
+			<div id="about" class="area">
 			<div class="section">
-				<div class="box">
+				<div class="box" id="box-quote">
 					<div>
 						<div>
 							<h3>Request Quote</h3>
@@ -81,7 +98,7 @@
         </div>
       </div>
       <div class="section">
-        <div class="box">
+        <div class="box-quote">
           <div>
             <form name="mm" action="sendquote.php" method="post" style="display:inline" onSubmit="return validate(this);">
           	<table id="quote-table" width="100%" border="0" cellspacing="0" cellpadding="0">
