--- a/Inter Custom Logistics/services.html
+++ b/Inter Custom Logistics/services.html
@@ -5,14 +5,33 @@
 	<meta charset="UTF-8">
 	<title>Inter Custom Logistics-Miami Freight Forwarding Services</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<link rel="stylesheet" href="css/mobile.css" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$("#menu-button").click(function(){
+				$(".menu",this).toggleClass("hover");
+				$("#navigation").toggleClass("show");
+				$("body").toggleClass("stopScroll");
+			});
+		});
+	</script>
 </head>
 <body>
 	<div id="header">
 		<div class="area-header">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
+				<a href="index.html">
+					<img src="images/logo-border.png" alt="LOGO">
+				</a>
 			</div>
 			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
+			</div>
+			<div class="index-quote">
+				<a href="quote.html">
+					<h2>Get Your Free Quote</h2>
+				</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -28,17 +47,15 @@
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
+			<div id="menu-button">
+				<a href="#" class="menu example5"><span></span></a>
+			</div>
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;margin-top: 40px;">
-		<div id="about" class="area-quote">
-			<a href="quote.html">
-				<div class="quote">
-					<h2>Get Your Free Quote</h2>
-				</div>
-			</a>
-			<div class="section">			<!-- or class="section" -->
-				<div class="box">
+		<div id="about" class="area">
+			<div class="section">
+				<div class="box" id="box-services">
 					<div>
 						<div>
 							<table>
@@ -115,7 +132,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		<div class="area">
+		<div class="footer-content">
 			<div id="connect">
 				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 			</div>
