adding to-do list master

--- a/Inter Custom Logistics/quote.html
+++ b/Inter Custom Logistics/quote.html
@@ -223,8 +223,8 @@
 			</div>
 		</div>
 	</div>
-<div id="quote-footer">
-	<div class="area">
+<div id="footer">
+	<div class="footer-content">
 		<div id="connect">
 			<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 		</div>
