--- a/Inter Custom Logistics/about.html
+++ b/Inter Custom Logistics/about.html
@@ -59,7 +59,7 @@
 						<div>
 							<h3>About Us</h3>
 							<p>
-								Inter Custom Logistics (ICL) specializes in the expeditious movement of freight around the world, both import and export (air and sea), utilizing a global network of partners/affiliates. Superior communications and reliable customer service are the cornerstones of the firm’s success and enable it to sustain a solid base of loyal clients. Located in Miami and near Miami International Airport & the Port of Miami, the staff of experienced professionals offers a total package of services:
+								Inter Custom Logistics (ICL) specializes in the expeditious movement of freight around the world, both import and export (air and sea), utilizing a global network of partners/affiliates. Superior communications and reliable customer service are the cornerstones of the firm’s success and enable it to sustain a solid base of loyal clients. Located in Miami and near Miami International Airport & the Port of Miami, the staff of experienced professionals offers a total package of services.
 							</p>
 							<h3>Services</h3>
 								<ul style="list-style-type:disc">
@@ -83,8 +83,8 @@
 								Gladys Pardo<br>
 								General Manager<br>
 								<p>
-									Gladys Pardo is General Manager of Inter Customs Logistics, LLC. – Miami, Florida has over 20 years of experience in the international transportation industry. She has a degree in accounting from Miami Dade Community College.
-									In 1986 Gladys joined Overcom Trade, Inc. where she earned her first job experience in the shipping industry. Her areas of expertise included freight forwarding, purchasing, air, ocean, import and export freight forwarding. Then in 1993 Gladys joined Customs And Trade Services, Inc in Miami as an Account Executive handling import and export consolidations, and promoted to Export Manager in 2001.
+									Gladys Pardo has over 20 years of experience in the international transportation industry. She has a degree in accounting from Miami Dade College.
+									In 1986 Gladys joined Overcom Trade, Inc. where she earned her first job experience in the shipping industry. Her areas of expertise included freight forwarding, purchasing, air, ocean, import and export freight forwarding. Then in 1993 Gladys joined Customs And Trade Services, Inc in Miami as an Account Executive handling import and export consolidations, eventually promoted to Export Manager in 2001.
 									<br><br>
 									In February 2007, Gladys created this new Miami Company to offer clients and agent/partners the same dedicated service that she has provided since 1986 to the transportation industry.
 								</p>
