--- a/Inter Custom Logistics/index.html
+++ b/Inter Custom Logistics/index.html
@@ -77,7 +77,7 @@
 							<img src="images/agents.png" alt="Img" height="100" width="100"/>
 							<h3>Fully Licensed</h3> <!-- better word than transactions -->
 							<p>
-								Domestic and international Freight Forwarder. NVOCC and IATA certified.
+								Domestic and International Freight Forwarder. NVOCC & IATA certified.
 							</p>
 						</li>
 						<li>
@@ -91,14 +91,14 @@
 							<img src="images/tracking.png" alt="Img" height="100" width="100" />
 							<h3>Mobile Tracking</h3>
 							<p>
-								Track your shipments on any smart phone or browser.
+								Track your shipments on any smart phone or web browser.
 							</p>
 						</li>
 						<li>
 							<img src="images/buildings.png" alt="Img" height="100" width="100" />
 							<h3>Professional Service</h3>
 							<p>
-								Experienced and relaible staff.
+								Experienced staff, superior communications and reliable customer service are the cornerstones of the firm’s success.
 							</p>
 						</li>
 					</ul>
@@ -110,7 +110,7 @@
 				</div>
 				<h3>We Aim Higher</h3>
 				<p>
-					Based in Miami, Florida, Inter Custom Logistics has the solution to any of your freight forwarding needs.
+					Based in Miami, Florida. Inter Custom Logistics has the solution to any of your freight forwarding needs.
 			</div>
 		</div>
 	</div>
