--- a/Inter Custom Logistics/quote.html
+++ b/Inter Custom Logistics/quote.html
@@ -93,6 +93,14 @@
               <p>
                 We are pleased to offer you a quotation for your global logistics needs. Please fill out the following information, and we will be in touch with you shortly.
 							</p>
+							<p>
+								You may also reach us at:
+							</p>
+							<p>
+								Ph: (305) 718-8190<br>
+								Fx: (305) 718-9877<br>
+								Email: traffic@intercustom.com
+							</p>
             </div>
           </div>
         </div>
