--- a/Meme Battle/card.html
+++ b/Meme Battle/card.html
@@ -10,52 +10,49 @@
     <div id="content">
       <div id="card">
       <div id="card-name"></div>
-      <div id="card-health">
-        110HP
-      </div>
-      <div id="card-image">
-        <img src="https://66.media.tumblr.com/a6e7ba1adc71792ccb480137bd7823e9/tumblr_o804kfDz911uies7so1_500.png">
+      <div id="card-hp"></div>
+      <div id="card-img-cont">
+        <img id="card-img" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
       </div>
       <div id="card-moveset">
-        <div class="move" id="move-1">
-          <div class="move-1-row">
-            <div class="move-name" id="move-1-name">
-            React
-            </div>
-            <div class="move-cost" id="move-1-cost">
-              <!--<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>-->
+        <div class="move" id="move1">
+          <div class="move1-row">
+            <div class="move-name" id="move1-name"></div>
+            <div class="move-cost" id="move1-cost">
               <img src='http://www.top3tours.com/TourAdvisors_Top_3_Best_Tours_Puerto_Plata/slider_images/FB-ThumbsUp.gif'>
             </div>
-            <div class="move-damage" id="move-1-damage">
-            20
-            </div>
+            <div class="move-dmg" id="move1-dmg"></div>
           </div>
-          <div class="move-effect" id="move-1-effect">
-            Flip a coin. If heads, during your opponents next turn, prevent all damage done to spongegar.
-          </div>
+          <div class="move-effect" id="move1-effect"></div>
         </div>
         <div class="move" id="move-2">
-          <div class="move-cost" id="move-2-cost">
-            <!--<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>-->
+          <div class="move1-row">
+            <div class="move-name" id="move2-name"></div>
+            <div class="move-cost" id="move2-cost"></div>
+            <div class="move-dmg" id="move2-dmg"></div>
           </div>
-          <div class="move-name" id="move-2-name">
-          Savage
-          </div>
-          <div class="move-damage" id="move-2-damage">
-          60
-          </div>
-          <div class="move-effect" id="move-2-effect">
-          </div>
+          <div class="move-effect" id="move2-effect"></div>
         </div>
       </div>
     </div>
   </div>
   <script>
-  var hero = [];
-  var spongegar = {name: 'SpongeGar', hp: 110, m1: 'React', m1_dmg: 20, m1_effect: 'Flip a coin. If heads, during your opponents next turn, prevent all damage done to spongegar.'};
-  hero[0] = spongegar;
-  $('#card-name').text(hero[0].name);
-  console.log(spongegar.name);
+    var user = 0;
+    var hero = [];
+    var spongegar = {name: 'SpongeGar', hp: 110, img: 'https://66.media.tumblr.com/a6e7ba1adc71792ccb480137bd7823e9/tumblr_o804kfDz911uies7so1_500.png', m1: 'React', m1_dmg: 20, m1_effect: 'Flip a coin. If heads, during your opponents next turn, prevent all damage done to spongegar.', m2: 'Savage', m2_dmg: 60, m2_effect: '',};
+    hero[0] = spongegar;
+    user = 0;
+    $('#card-name').text(hero[user].name);
+    $('#card-hp').text(hero[user].hp);
+    $("#card-img").attr("src", hero[user].img);
+    $('#move1-name').text(hero[user].m1);
+    $('#move1-dmg').text(hero[user].m1_dmg);
+    $('#move1-effect').text(hero[user].m1_effect);
+    $('#move2-name').text(hero[user].m2);
+    $('#move2-dmg').text(hero[user].m2_dmg);
+    $('#move2-effect').text(hero[user].m2_effect);
+
+    console.log(spongegar.name);
   </script>
   <style>
     div#card {
@@ -67,19 +64,19 @@
     font-family: arial;
     display: table;
     }
-    div#card-image {
+    div#card-image-cont {
     width: 100%;
     margin-top: 5px;
     float: left;
-    border: 2px solid #565656;
     }
-    div#card-image img {
+    div#card-img-cont img {
     width: 100%;
     margin: 0 auto;
     display:  table;
     background: #7d6b6b;
+    border: 2px solid #565656;
     }
-    div#card-health {
+    div#card-hp {
     float: right;
     }
     div#card-name {
@@ -91,12 +88,12 @@
     width: 100%;
     padding-top: 10px;
     }
-    div#move-1-cost img {
+    div#move1-cost img {
     max-width: 24px;
     padding-left: 10px;
     margin-top: -7px;
     }
-    div#move-2 {
+    div#move2 {
       padding-top: 5px;
     }
     div.move-cost {
@@ -111,7 +108,7 @@
     {
       float: left;
     }
-    div.move-damage {
+    div.move-dmg {
     float: right;
     }
     div.move-effect {
@@ -120,6 +117,6 @@
     font-size: 12px;
     padding-left: 10px;
     }
-  </style>
-</body>
+    </style>
+  </body>
 </html>
