--- a/MemeWars/card.html
+++ b/MemeWars/card.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>Meme-Wars</title>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script type='text/javascript' src="file:///Users/adrianpardo/Documents/cs50xmiami/MemeWars/script.js"></script>
     <link rel="stylesheet" href="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/style.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!--<script src="/socket.io/socket.io.js"></script>-->
+    <script type='text/javascript' src="file:///Users/adrianpardo/Documents/cs50xmiami/MemeWars/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!--<script>
+      var socket = io();
+      $('form').submit(function(){
+        socket.emit('chat message', $('#m').val());
+        $('#m').val('');
+        return false;
+      });
+      socket.on('chat message', function(msg){
+        $('#messages').append($('<li>').text(msg));
+      });
+    </script>-->
   </head>
   <body>
     <div id="content">
@@ -13,16 +26,16 @@
         <div class="turn-menu" id="turn-menu1">
           <div class="menu-row" id="menu-move"></div>
           <div class="menu-row" id="menu-move2"></div>
-          <div class="menu-row">Attach: Like</div>
-          <div class="menu-row">Attach: Item</div>
-          <div class="menu-row">Summon: Support</div>
+          <div class="menu-row" id="menu-like">Attach: Like</div>
+          <div class="menu-row" id="menu-item">Attach: Item</div>
+          <div class="menu-row" id="menu-support">Summon: Support</div>
           <div class="menu-row">End Turn</div>
         </div>
         <div class="card">
           <div class="hero-name" id="hero-name"></div>
           <div class="card-hp" id="hero-hp"></div>
           <div id="img-cont">
-            <img class="img" id="hero-img" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
+            <img class="img" id="hero-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div id="hero-moveset">
             <div class="move" id="move1">
@@ -47,7 +60,7 @@
         <div class="card" id="item-card">
           <div class="card-name" id="item-name"></div>
           <div id="img-cont">
-            <img class="item-img" id="item-img" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
+            <img class="item-img" id="item-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div class="card-effect" id="item-effect"></div>
         </div>
@@ -55,7 +68,7 @@
           <div class="card-name" id="support-name"></div>
           <div class="move-dmg" id="support-dmg"></div>
           <div id="img-cont">
-            <img class="img" id="support-img" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
+            <img class="img" id="support-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div class="card-effect" id="support-effect"></div>
           <div class="card-shield">
@@ -63,21 +76,37 @@
             <div class="support-hp"id="support-hp"></div>
           </div>
         </div>
+        <div class="card" id="support2-card">
+          <div class="card-name" id="support2-name"></div>
+          <div class="move-dmg" id="support2-dmg"></div>
+          <div id="img-cont">
+            <img class="img" id="support2-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
+          </div>
+          <div class="card-effect" id="support2-effect"></div>
+          <div class="card-shield">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/blooddrop.png'>
+            <div class="support-hp"id="support2-hp"></div>
+          </div>
+        </div>
       </div>
+      <ul id="messages"></ul>
+      <!--<form action="">
+        <input id="m" autocomplete="off" /><button>Send</button>
+      </form>-->
       <div id="bottom-row">
         <div class="turn-menu" id="turn-menu2">
           <div class="menu-row" id="menu2-move"></div>
           <div class="menu-row" id="menu2-move2"></div>
-          <div class="menu-row">Attach: Like</div>
-          <div class="menu-row">Attach: Item</div>
-          <div class="menu-row">Summon: Support</div>
-          <div class="menu-row">End Turn</div>
+          <div class="menu-row" id="menu2-like">Attach: Like</div>
+          <div class="menu-row" id="menu2-item">Attach: Item</div>
+          <div class="menu-row" id="menu2-support">Summon: Support</div>
+          <div class="menu-row" id="menu2-support2">End Turn</div>
         </div>
         <div class="card" id="card2">
           <div class="hero-name" id="hero-name2"></div>
           <div class="card-hp" id="hero-hp2"></div>
           <div id="img-cont">
-            <img class="img" id="hero-img2" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
+            <img class="img" id="hero-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div id="hero-moveset">
             <div class="move" id="move1">
@@ -102,7 +131,7 @@
         <div class="card" id="item-card2">
           <div class="card-name" id="item-name2"></div>
           <div id="img-cont">
-            <img class="item-img" id="item-img2" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
+            <img class="item-img" id="item-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div class="card-effect" id="item-effect2"></div>
         </div>
@@ -110,12 +139,24 @@
           <div class="card-name" id="support-name2"></div>
           <div class="move-dmg" id="support-dmg2"></div>
           <div id="img-cont">
-            <img class="img" id="support-img2" src="http://www.iconsdb.com/icons/preview/black/question-mark-xxl.png">
+            <img class="img" id="support-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div class="card-effect" id="support-effect2"></div>
           <div class="card-shield">
             <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/blooddrop.png'>
             <div class="support-hp" id="support-hp2"></div>
+          </div>
+        </div>
+        <div class="card" id="support2-card2">
+          <div class="card-name" id="support2-name2"></div>
+          <div class="move-dmg" id="support2-dmg2"></div>
+          <div id="img-cont">
+            <img class="img" id="support2-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
+          </div>
+          <div class="card-effect" id="support2-effect2"></div>
+          <div class="card-shield">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/blooddrop.png'>
+            <div class="support-hp"id="support2-hp2"></div>
           </div>
         </div>
       </div>
