--- a/MemeWars/card.html
+++ b/MemeWars/card.html
@@ -31,30 +31,36 @@
           <div class="menu-row" id="menu-support">Summon: Support</div>
           <div class="menu-row">End Turn</div>
         </div>
-        <div class="card">
-          <div class="hero-name" id="hero-name"></div>
-          <div class="card-hp" id="hero-hp"></div>
-          <div id="img-cont">
-            <img class="img" id="hero-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
+        <div id="card-cont">
+          <div class="card">
+            <div class="hero-name" id="hero-name"></div>
+            <div class="card-hp" id="hero-hp"></div>
+            <div id="img-cont">
+              <img class="img" id="hero-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
+            </div>
+            <div id="hero-moveset">
+              <div class="move" id="move1">
+                <div class="move-row">
+                  <div class="move-name" id="move1-name"></div>
+                  <div class="move-cost" id="move1-cost"></div>
+                  <div class="move-dmg" id="move1-dmg"></div>
+                </div>
+                <div class="move-effect" id="move1-effect"></div>
+              </div>
+              <div class="move" id="move2">
+                <div class="move-row">
+                  <div class="move-name" id="move2-name"></div>
+                  <div class="move-cost" id="move2-cost"></div>
+                  <div class="move-dmg" id="move2-dmg"></div>
+                </div>
+                <div class="move2b-cost" id="move2b-cost"></div>
+                <div class="move-effect" id="move2-effect"></div>
+              </div>
+            </div>
           </div>
-          <div id="hero-moveset">
-            <div class="move" id="move1">
-              <div class="move-row">
-                <div class="move-name" id="move1-name"></div>
-                <div class="move-cost" id="move1-cost"></div>
-                <div class="move-dmg" id="move1-dmg"></div>
-              </div>
-              <div class="move-effect" id="move1-effect"></div>
-            </div>
-            <div class="move" id="move2">
-              <div class="move-row">
-                <div class="move-name" id="move2-name"></div>
-                <div class="move-cost" id="move2-cost"></div>
-                <div class="move-dmg" id="move2-dmg"></div>
-              </div>
-              <div class="move2b-cost" id="move2b-cost"></div>
-              <div class="move-effect" id="move2-effect"></div>
-            </div>
+          <div class="likes">
+            Likes:
+            <div class="hero-energy" id="hero-energy"></div>
           </div>
         </div>
         <div class="card" id="item-card">
@@ -102,29 +108,35 @@
           <div class="menu-row" id="menu2-support">Summon: Support</div>
           <div class="menu-row" id="menu2-support2">End Turn</div>
         </div>
-        <div class="card" id="card2">
-          <div class="hero-name" id="hero-name2"></div>
-          <div class="card-hp" id="hero-hp2"></div>
-          <div id="img-cont">
-            <img class="img" id="hero-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
+        <div id="card-cont">
+          <div class="likes">
+            Likes:
+            <div class="hero-energy" id="hero-energy2"></div>
           </div>
-          <div id="hero-moveset">
-            <div class="move" id="move1">
-              <div class="move-row">
-                <div class="move-name" id="move1-name2"></div>
-                <div class="move-cost" id="move1-cost2"></div>
-                <div class="move-dmg" id="move1-dmg2"></div>
-              </div>
-              <div class="move-effect" id="move1-effect2"></div>
+          <div class="card" id="card2">
+            <div class="hero-name" id="hero-name2"></div>
+            <div class="card-hp" id="hero-hp2"></div>
+            <div id="img-cont">
+              <img class="img" id="hero-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
             </div>
-            <div class="move" id="move2">
-              <div class="move-row">
-                <div class="move-name" id="move2-name2"></div>
-                <div class="move-cost" id="move2-cost2"></div>
-                <div class="move-dmg" id="move2-dmg2"></div>
+            <div id="hero-moveset">
+              <div class="move" id="move1">
+                <div class="move-row">
+                  <div class="move-name" id="move1-name2"></div>
+                  <div class="move-cost" id="move1-cost2"></div>
+                  <div class="move-dmg" id="move1-dmg2"></div>
+                </div>
+                <div class="move-effect" id="move1-effect2"></div>
               </div>
-              <div class="move2b-cost" id="move2b-cost2"></div>
-              <div class="move-effect" id="move2-effect2"></div>
+              <div class="move" id="move2">
+                <div class="move-row">
+                  <div class="move-name" id="move2-name2"></div>
+                  <div class="move-cost" id="move2-cost2"></div>
+                  <div class="move-dmg" id="move2-dmg2"></div>
+                </div>
+                <div class="move2b-cost" id="move2b-cost2"></div>
+                <div class="move-effect" id="move2-effect2"></div>
+              </div>
             </div>
           </div>
         </div>
