changing how likes work in memewars

--- a/MemeWars/card.html
+++ b/MemeWars/card.html
@@ -26,10 +26,10 @@
         <div class="turn-menu" id="turn-menu1">
           <div class="menu-row" id="menu-move"></div>
           <div class="menu-row" id="menu-move2"></div>
-          <div class="menu-row" id="menu-like">Attach: Like</div>
           <div class="menu-row" id="menu-item">Attach: Item</div>
-          <div class="menu-row" id="menu-support">Summon: Support</div>
-          <div class="menu-row">End Turn</div>
+          <div class="menu-row" id="menu-1support">Summon: 1 Like Support</div>
+          <div class="menu-row" id="menu-3support">Summon: 3 Like Support</div>
+          <div class="menu-row" id="menu-end">End Turn</div>
         </div>
         <div id="card-cont">
           <div class="card">
@@ -103,10 +103,10 @@
         <div class="turn-menu" id="turn-menu2">
           <div class="menu-row" id="menu2-move"></div>
           <div class="menu-row" id="menu2-move2"></div>
-          <div class="menu-row" id="menu2-like">Attach: Like</div>
           <div class="menu-row" id="menu2-item">Attach: Item</div>
-          <div class="menu-row" id="menu2-support">Summon: Support</div>
-          <div class="menu-row" id="menu2-support2">End Turn</div>
+          <div class="menu-row" id="menu2-1support">Summon: 1 Like Support</div>
+          <div class="menu-row" id="menu2-3support">Summon: 3 Like Support</div>
+          <div class="menu-row" id="menu2-end">End Turn</div>
         </div>
         <div id="card-cont">
           <div class="likes">
