--- a/MemeWars/battle.html
+++ b/MemeWars/battle.html
@@ -75,7 +75,7 @@
                   <div class="move-cost" id="move2-cost"></div>
                   <div class="move-dmg" id="move2-dmg"></div>
                 </div>
-                <div class="move2b-cost" id="move2b-cost"></div>
+                <!--<div class="move2b-cost" id="move2b-cost"></div>-->
                 <div class="move-effect" id="move2-effect"></div>
               </div>
             </div>
@@ -167,7 +167,7 @@
                   <div class="move-cost" id="move2-cost2"></div>
                   <div class="move-dmg" id="move2-dmg2"></div>
                 </div>
-                <div class="move2b-cost" id="move2b-cost2"></div>
+                <!--<div class="move2b-cost" id="move2b-cost2"></div>-->
                 <div class="move-effect" id="move2-effect2"></div>
               </div>
             </div>
