--- a/MemeWars/battle.html
+++ b/MemeWars/battle.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Meme-Wars</title>
     <link rel="stylesheet" href="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/style.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!--<script src="/socket.io/socket.io.js"></script>-->
+    <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.0/howler.min.js"></script>
     <script type='text/javascript' src="file:///Users/adrianpardo/Documents/cs50xmiami/MemeWars/cards.js"></script>
     <script type='text/javascript' src="file:///Users/adrianpardo/Documents/cs50xmiami/MemeWars/script.js"></script>
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--<script>
       var socket = io();
